src/oci_policy_analysis/application/core/parser/policy_parser/PolicyParser.py
# Generated from Policy.g4 by ANTLR 4.13.2
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO


class PolicyParser ( Parser ):

    grammarFileName = "Policy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "':'", "'/'", "'!'",
                     "'.'", "'='", "'''", "'('", "')'", "'*/'", "'/*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "BEFORE", "AFTER", "BETWEEN",
                      "NEQ", "NEWLINE", "COMMENT", "QUOTED_STRING", "WS",
                      "ANYUSER", "ANYTENANCY", "ANYGROUP", "ENDORSE", "ALLOW",
                      "DENY", "DEFINE", "RESOURCE", "TO", "OF", "IN", "NOT",
                      "WHERE", "WITH", "DYNAMICGROUP", "GROUP", "SERVICE",
                      "COMPARTMENT", "TENANCY", "READ", "INSPECT", "MANAGE",
                      "ASSOCIATE", "ADMIT", "USE", "ANY", "AND", "ALL",
                      "AS", "ID", "HCL_VAR", "OCID", "WORD" ]

    RULE_policy = 0
    RULE_allowExpression = 1
    RULE_endorseExpression = 2
    RULE_defineExpression = 3
    RULE_compartmentSubject = 4
    RULE_admitExpression = 5
    RULE_endorseVerb = 6
    RULE_verb = 7
    RULE_permissionList = 8
    RULE_scope = 9
    RULE_endorseScope = 10
    RULE_subject = 11
    RULE_groupSubject = 12
    RULE_resourceSubject = 13
    RULE_serviceSubject = 14
    RULE_groupName = 15
    RULE_resourceSubjectId = 16
    RULE_serviceSubjectId = 17
    RULE_groupID = 18
    RULE_dynamicGroupSubject = 19
    RULE_tenancySubject = 20
    RULE_definedSubject = 21
    RULE_defined = 22
    RULE_resource = 23
    RULE_condition = 24
    RULE_unaryComparison = 25
    RULE_comparison = 26
    RULE_variable = 27
    RULE_operator = 28
    RULE_value = 29
    RULE_valueList = 30
    RULE_listElement = 31
    RULE_timeWindow = 32
    RULE_comparisonList = 33
    RULE_logicalCombine = 34
    RULE_patternMatch = 35

    ruleNames =  [ "policy", "allowExpression", "endorseExpression", "defineExpression",
                   "compartmentSubject", "admitExpression", "endorseVerb",
                   "verb", "permissionList", "scope", "endorseScope", "subject",
                   "groupSubject", "resourceSubject", "serviceSubject",
                   "groupName", "resourceSubjectId", "serviceSubjectId",
                   "groupID", "dynamicGroupSubject", "tenancySubject", "definedSubject",
                   "defined", "resource", "condition", "unaryComparison",
                   "comparison", "variable", "operator", "value", "valueList",
                   "listElement", "timeWindow", "comparisonList", "logicalCombine",
                   "patternMatch" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    BEFORE=14
    AFTER=15
    BETWEEN=16
    NEQ=17
    NEWLINE=18
    COMMENT=19
    QUOTED_STRING=20
    WS=21
    ANYUSER=22
    ANYTENANCY=23
    ANYGROUP=24
    ENDORSE=25
    ALLOW=26
    DENY=27
    DEFINE=28
    RESOURCE=29
    TO=30
    OF=31
    IN=32
    NOT=33
    WHERE=34
    WITH=35
    DYNAMICGROUP=36
    GROUP=37
    SERVICE=38
    COMPARTMENT=39
    TENANCY=40
    READ=41
    INSPECT=42
    MANAGE=43
    ASSOCIATE=44
    ADMIT=45
    USE=46
    ANY=47
    AND=48
    ALL=49
    AS=50
    ID=51
    HCL_VAR=52
    OCID=53
    WORD=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PolicyParser.EOF, 0)

        def allowExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.AllowExpressionContext)
            else:
                return self.getTypedRuleContext(PolicyParser.AllowExpressionContext,i)


        def endorseExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.EndorseExpressionContext)
            else:
                return self.getTypedRuleContext(PolicyParser.EndorseExpressionContext,i)


        def defineExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.DefineExpressionContext)
            else:
                return self.getTypedRuleContext(PolicyParser.DefineExpressionContext,i)


        def admitExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.AdmitExpressionContext)
            else:
                return self.getTypedRuleContext(PolicyParser.AdmitExpressionContext,i)


        def getRuleIndex(self):
            return PolicyParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = PolicyParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.allowExpression()
                    pass

                elif la_ == 2:
                    self.state = 73
                    self.endorseExpression()
                    pass

                elif la_ == 3:
                    self.state = 74
                    self.defineExpression()
                    pass

                elif la_ == 4:
                    self.state = 75
                    self.admitExpression()
                    pass


                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184875405312) != 0):
                    break

            self.state = 80
            self.match(PolicyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllowExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subject(self):
            return self.getTypedRuleContext(PolicyParser.SubjectContext,0)


        def IN(self):
            return self.getToken(PolicyParser.IN, 0)

        def scope(self):
            return self.getTypedRuleContext(PolicyParser.ScopeContext,0)


        def ALLOW(self):
            return self.getToken(PolicyParser.ALLOW, 0)

        def DENY(self):
            return self.getToken(PolicyParser.DENY, 0)

        def verb(self):
            return self.getTypedRuleContext(PolicyParser.VerbContext,0)


        def resource(self):
            return self.getTypedRuleContext(PolicyParser.ResourceContext,0)


        def permissionList(self):
            return self.getTypedRuleContext(PolicyParser.PermissionListContext,0)


        def WHERE(self):
            return self.getToken(PolicyParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(PolicyParser.ConditionContext,0)


        def COMMENT(self):
            return self.getToken(PolicyParser.COMMENT, 0)

        def NEWLINE(self):
            return self.getToken(PolicyParser.NEWLINE, 0)

        def TO(self):
            return self.getToken(PolicyParser.TO, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_allowExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllowExpression" ):
                listener.enterAllowExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllowExpression" ):
                listener.exitAllowExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllowExpression" ):
                return visitor.visitAllowExpression(self)
            else:
                return visitor.visitChildren(self)




    def allowExpression(self):

        localctx = PolicyParser.AllowExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_allowExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not(_la==26 or _la==27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 83
            self.subject()
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30:
                    self.state = 84
                    self.match(PolicyParser.TO)


                self.state = 87
                self.verb()
                self.state = 88
                self.resource()
                pass

            elif la_ == 2:
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30:
                    self.state = 90
                    self.match(PolicyParser.TO)


                self.state = 93
                self.permissionList()
                pass


            self.state = 96
            self.match(PolicyParser.IN)
            self.state = 97
            self.scope()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 98
                self.match(PolicyParser.WHERE)
                self.state = 99
                self.condition()


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 102
                self.match(PolicyParser.COMMENT)


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 105
                self.match(PolicyParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndorseExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subject(self):
            return self.getTypedRuleContext(PolicyParser.SubjectContext,0)


        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(PolicyParser.IN)
            else:
                return self.getToken(PolicyParser.IN, i)

        def endorseScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.EndorseScopeContext)
            else:
                return self.getTypedRuleContext(PolicyParser.EndorseScopeContext,i)


        def ENDORSE(self):
            return self.getToken(PolicyParser.ENDORSE, 0)

        def DENY(self):
            return self.getToken(PolicyParser.DENY, 0)

        def TO(self):
            return self.getToken(PolicyParser.TO, 0)

        def endorseVerb(self):
            return self.getTypedRuleContext(PolicyParser.EndorseVerbContext,0)


        def resource(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.ResourceContext)
            else:
                return self.getTypedRuleContext(PolicyParser.ResourceContext,i)


        def permissionList(self):
            return self.getTypedRuleContext(PolicyParser.PermissionListContext,0)


        def WITH(self):
            return self.getToken(PolicyParser.WITH, 0)

        def WHERE(self):
            return self.getToken(PolicyParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(PolicyParser.ConditionContext,0)


        def COMMENT(self):
            return self.getToken(PolicyParser.COMMENT, 0)

        def NEWLINE(self):
            return self.getToken(PolicyParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_endorseExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndorseExpression" ):
                listener.enterEndorseExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndorseExpression" ):
                listener.exitEndorseExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndorseExpression" ):
                return visitor.visitEndorseExpression(self)
            else:
                return visitor.visitChildren(self)




    def endorseExpression(self):

        localctx = PolicyParser.EndorseExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_endorseExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 108
                self.match(PolicyParser.ENDORSE)
                pass
            elif token in [27]:
                self.state = 109
                self.match(PolicyParser.DENY)
                self.state = 110
                self.match(PolicyParser.ENDORSE)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            self.subject()
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 114
                self.match(PolicyParser.TO)
                self.state = 115
                self.endorseVerb()
                self.state = 116
                self.resource()
                pass

            elif la_ == 2:
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30:
                    self.state = 118
                    self.match(PolicyParser.TO)


                self.state = 121
                self.permissionList()
                pass


            self.state = 124
            self.match(PolicyParser.IN)
            self.state = 125
            self.endorseScope()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 126
                self.match(PolicyParser.WITH)
                self.state = 127
                self.resource()
                self.state = 128
                self.match(PolicyParser.IN)
                self.state = 129
                self.endorseScope()


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 133
                self.match(PolicyParser.WHERE)
                self.state = 134
                self.condition()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 137
                self.match(PolicyParser.COMMENT)


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 140
                self.match(PolicyParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(PolicyParser.DEFINE, 0)

        def definedSubject(self):
            return self.getTypedRuleContext(PolicyParser.DefinedSubjectContext,0)


        def AS(self):
            return self.getToken(PolicyParser.AS, 0)

        def defined(self):
            return self.getTypedRuleContext(PolicyParser.DefinedContext,0)


        def COMMENT(self):
            return self.getToken(PolicyParser.COMMENT, 0)

        def NEWLINE(self):
            return self.getToken(PolicyParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_defineExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineExpression" ):
                listener.enterDefineExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineExpression" ):
                listener.exitDefineExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineExpression" ):
                return visitor.visitDefineExpression(self)
            else:
                return visitor.visitChildren(self)




    def defineExpression(self):

        localctx = PolicyParser.DefineExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defineExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(PolicyParser.DEFINE)
            self.state = 144
            self.definedSubject()
            self.state = 145
            self.match(PolicyParser.AS)
            self.state = 146
            self.defined()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 147
                self.match(PolicyParser.COMMENT)


            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 150
                self.match(PolicyParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompartmentSubjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPARTMENT(self):
            return self.getToken(PolicyParser.COMPARTMENT, 0)

        def WORD(self):
            return self.getToken(PolicyParser.WORD, 0)

        def HCL_VAR(self):
            return self.getToken(PolicyParser.HCL_VAR, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_compartmentSubject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompartmentSubject" ):
                listener.enterCompartmentSubject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompartmentSubject" ):
                listener.exitCompartmentSubject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompartmentSubject" ):
                return visitor.visitCompartmentSubject(self)
            else:
                return visitor.visitChildren(self)




    def compartmentSubject(self):

        localctx = PolicyParser.CompartmentSubjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compartmentSubject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(PolicyParser.COMPARTMENT)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==52 or _la==54):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdmitExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subject(self):
            return self.getTypedRuleContext(PolicyParser.SubjectContext,0)


        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(PolicyParser.IN)
            else:
                return self.getToken(PolicyParser.IN, i)

        def scope(self):
            return self.getTypedRuleContext(PolicyParser.ScopeContext,0)


        def ADMIT(self):
            return self.getToken(PolicyParser.ADMIT, 0)

        def DENY(self):
            return self.getToken(PolicyParser.DENY, 0)

        def TO(self):
            return self.getToken(PolicyParser.TO, 0)

        def endorseVerb(self):
            return self.getTypedRuleContext(PolicyParser.EndorseVerbContext,0)


        def resource(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.ResourceContext)
            else:
                return self.getTypedRuleContext(PolicyParser.ResourceContext,i)


        def permissionList(self):
            return self.getTypedRuleContext(PolicyParser.PermissionListContext,0)


        def OF(self):
            return self.getToken(PolicyParser.OF, 0)

        def endorseScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolicyParser.EndorseScopeContext)
            else:
                return self.getTypedRuleContext(PolicyParser.EndorseScopeContext,i)


        def WITH(self):
            return self.getToken(PolicyParser.WITH, 0)

        def WHERE(self):
            return self.getToken(PolicyParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(PolicyParser.ConditionContext,0)


        def COMMENT(self):
            return self.getToken(PolicyParser.COMMENT, 0)

        def NEWLINE(self):
            return self.getToken(PolicyParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_admitExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdmitExpression" ):
                listener.enterAdmitExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdmitExpression" ):
                listener.exitAdmitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdmitExpression" ):
                return visitor.visitAdmitExpression(self)
            else:
                return visitor.visitChildren(self)




    def admitExpression(self):

        localctx = PolicyParser.AdmitExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_admitExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                self.state = 156
                self.match(PolicyParser.ADMIT)
                pass
            elif token in [27]:
                self.state = 157
                self.match(PolicyParser.DENY)
                self.state = 158
                self.match(PolicyParser.ADMIT)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 161
            self.subject()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 162
                self.match(PolicyParser.OF)
                self.state = 163
                self.endorseScope()


            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 166
                self.match(PolicyParser.TO)
                self.state = 167
                self.endorseVerb()
                self.state = 168
                self.resource()
                pass

            elif la_ == 2:
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30:
                    self.state = 170
                    self.match(PolicyParser.TO)


                self.state = 173
                self.permissionList()
                pass


            self.state = 176
            self.match(PolicyParser.IN)
            self.state = 177
            self.scope()
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 178
                self.match(PolicyParser.WITH)
                self.state = 179
                self.resource()
                self.state = 180
                self.match(PolicyParser.IN)
                self.state = 181
                self.endorseScope()


            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 185
                self.match(PolicyParser.WHERE)
                self.state = 186
                self.condition()


            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 189
                self.match(PolicyParser.COMMENT)


            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 192
                self.match(PolicyParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndorseVerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb(self):
            return self.getTypedRuleContext(PolicyParser.VerbContext,0)


        def ASSOCIATE(self):
            return self.getToken(PolicyParser.ASSOCIATE, 0)

        def getRuleIndex(self):
            return PolicyParser.RULE_endorseVerb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndorseVerb" ):
                listener.enterEndorseVerb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndorseVerb" ):
                listener.exitEndorseVerb(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndorseVerb" ):
                return visitor.visitEndorseVerb(self)
            else:
                return visitor.visitChildren(self)




    def endorseVerb(self):

        localctx = PolicyParser.EndorseVerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_endorseVerb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41, 42, 43, 46]:
                self.state = 195
                self.verb()
                pass
            elif token in [44]:
                self.state = 196
                self.match(PolicyParser.ASSOCIATE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

